lifferay_frontend_k8s/liferay-build-ns.yml
apiVersion: v1

kind: Namespace

metadata:

  name: liferay-client10-build
