lifferay_frontend_k8s/liferay-prod-ns.yml
apiVersion: v1
<<<<<<< HEAD

kind: Namespace

metadata:

  name: liferay-client10



---



apiVersion: v1

kind: ResourceQuota

metadata:

  name: build

  namespace: liferay-client10

spec:

  hard:

    requests.cpu: 2

    requests.memory: 3Gi

    limits.cpu: 3

    limits.memory: 4Gi

    pods: 15
=======
kind: Namespace
metadata:
  name: liferay-client10
