lifferay_frontend_k8s/liferay-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: liferay-client10
  namespace: liferay
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: app.liferay.35.166.225.194.nip.io
    http:
      paths:
      - backend:
          serviceName: liferary-client10
          servicePort: 8080
